Bug 150876 - When "Track Changes" is on, the second inserted row in the table won't perceive after created it
Summary: When "Track Changes" is on, the second inserted row in the table won't percei...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0 target:7.4.2
Keywords: filter:odt
Depends on:
Blocks:
 
Reported: 2022-09-09 06:34 UTC by NISZ LibreOffice Team
Modified: 2022-09-26 11:48 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Odt file for testing (16.50 KB, application/vnd.oasis.opendocument.text)
2022-09-09 06:34 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2022-09-09 06:34:06 UTC
Description:
When I create a table and click in the last cell in it and after the last character in that cell. 
After that I press "Tab" button and the Writer creates a new line and you click in the last cell in this new row and press "Tab" again.
The new row produced again but not "Track Changed". 
When the "Track Changes" is on it doesn't perceive like it changes the second new row only the first one recorded "Track Changes". 
After some time the "changed" blue turn off and you can see the normal color like it wasn't "Track Changes" on.

Steps to Reproduce:
1. Open the attached file
2. Click the last cell after the "45" text
3. Press "Tab"
4. Click the last cell of this new row
5. Press "Tab" again


Actual Results:
When the "Track Changes" is on then it doesn't perceive like it changes the second row.

Expected Results:
It perceives the changes any time when it's done.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 88d7aa8ab79b1197191b5eb24a3b67d313797026
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 1 NISZ LibreOffice Team 2022-09-09 06:34:55 UTC
Created attachment 182331 [details]
Odt file for testing
Comment 2 Commit Notification 2022-09-09 06:39:40 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d011ae00cbfa714b9b2b4e8ca64fa18896ecde4d

tdf#150876 sw: track new rows inserted after a tracked row insertion

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2022-09-09 10:50:53 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/431c2af3241ebc027fe95213846b98e0456da359

tdf#150876 sw: track new rows inserted after a tracked row insertion

It will be available in 7.4.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 NISZ LibreOffice Team 2022-09-26 11:48:16 UTC
Verified in:
Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: d3050ff4a1355f7ebd3d4e7ddc8fb64f2b8894dd
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded