tdf#150876 sw: track new rows inserted after a tracked row insertion

New row insertions after an already tracked row insertion
weren't tracked.

Regression from commit b251228d2e5e2832e0a617213173e8841f5b7428
"tdf#150666 sw: allow to delete tracked table row insertions"

Follow-up to commit dbc82c02eb24ec1c97c6ee32069771d8deb394f9
"tdf#143358 sw: track insertion of empty table rows".

Change-Id: Ic365e70aa7808237a1bd69d0101a098ae70e8813
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139594
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>